--- a/pug/index.pug
+++ b/pug/index.pug
@@ -9,6 +9,11 @@ head
 body
   #titlecard
     h1#title Tic Tac Toe
+    .playerSelect#difficultywindow
+      p Difficulty:
+      button#selecteasy easy
+      button#selectmedium medium
+      //button#selecthard hard
     .playerSelect#selectwindow
       p Choose your side:
       button#selectx X
