--- a/scss/style.sass
+++ b/scss/style.sass
@@ -3,8 +3,8 @@
   visibility: hidden !important
 
 body
-  display: none
-  //display: flex
+  //display: none
+  display: flex
   flex-direction: column
   justify-content: center
   align-items: center
@@ -49,6 +49,19 @@ body
         background-color: rgba(255, 255, 255, 0.21)
       &:focus
         outline: 0
+
+    &#difficultywindow
+      button
+        font-size: 15px
+        text-align: center
+        width: auto
+        padding: 10px
+
+    &#selectwindow
+      display: none
+      
+
+
     &#gameOverWindow
       display: none
       font-size: 30px
