--- a/pug/index.pug
+++ b/pug/index.pug
@@ -13,7 +13,7 @@ body
       p Difficulty:
       button#selecteasy easy
       button#selectmedium medium
-      //button#selecthard hard
+      button#selecthard hard
     .playerSelect#selectwindow
       p Choose your side:
       button#selectx X
