--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,7 +1,7 @@
 head
   title TicTacToe!
-  link(rel="stylesheet", href="/css/style.css")
-  link(rel="stylesheet", href="/css/normalize.css")
+  link(rel="stylesheet", href="css/style.css")
+  link(rel="stylesheet", href="css/normalize.css")
   link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Reem+Kufi|Scope+One|Yatra+One|Montserrat|Raleway")
   link(rel="stylesheet", href="css/font-awesome.min.css")
   link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
@@ -19,7 +19,7 @@ body
       button#selectx X
       button#selecto O
     .playerSelect#gameOverWindow
-      p#gameOverText You won!, Replay?
+      p#gameOverText 
       i#replay.fa.fa-check
   .board
     .row
