Fixed Firefox graphical bug

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -19,7 +19,7 @@ body
       button#selectx X
       button#selecto O
     .playerSelect#gameOverWindow
-      p#gameOverText 
+      p#gameOverText You lose!
       i#replay.fa.fa-check
   .board
     .row
