Fix several bugs

--- a/scss/style.sass
+++ b/scss/style.sass
@@ -38,6 +38,7 @@ body
       color: white
       font-family: Scope One
     button
+      cursor: pointer
       color: white
       background-color: rgba(255, 255, 255, 0.11)
       border: 0
@@ -110,7 +111,9 @@ body
       border-radius: 0px
 
       background: linear-gradient(135deg, rgba(162,85,227,0.2) 0%,rgba(255,152,101,0.1) 100%)
-      //border: 1px solid rgb(136, 0, 70)
+
+      user-select: none
+      cursor: pointer
 
       font-family: Raleway
       font-size: 60px
